ãURL 생성자 코드 수정